--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,22 +2,172 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>
+    <title>VegFest</title>
 
-    </title>
+    <link rel="stylesheet" href="/assets/css/bootstrap-3.1.0.min.css">
+    <link rel="stylesheet" href="/assets/css/font-awesome-4.0.3.min.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+
+    <script src="/assets/js/jquery-3.2.1.slim.min.js" ></script>
+    <script src="/assets/js/bootstrap-3.1.0.min.js"></script>
   </head>
-  <body>
-    <form class="" action="/charge" method="post">
-      <article class="">
-        <label for="">Amount: $5.00</label>
-      </article>
-      <script src="//checkout.stripe.com/v2/checkout.js"
-      class="stripe-button"
-      data-key="{{keyPublishable}}"
-      data-locale="auto"
-      data-description="Sample Charge"
-      data-amount="500">
-      </script>
-    </form>
+  <body class="green-veg-pattern-background">
+    <div class="container-fluid" id="top-heading">
+      <header class="row" id="event-header">
+	      <div class="col-md-10 col-md-offset-1 " style="background: linear-gradient(to bottom,#fff 0,#eaeaea 100%);border-radius: 5px;-webkit-box-shadow: 0 1px 9px 0 rgba(0,0,0,0.7);box-shadow: 0 1px 9px 0 rgba(0,0,0,0.7);padding:5%; margin-top  :2%;">
+          <div class="row">
+            <div class="col-sm-offset-2 col-sm-8 text-center">
+              <img src="/assets/img/vegetables.png" alt="" class="img-responsive" />
+            </div>
+          </div>
+          <div class="text-center">
+            <h1 class="zona">Become a VegFest Member!</h1>
+  	        <p>
+              Show your support for <strong>VegWorcester</strong> & <strong>New England VegFest</strong>!
+  	        </p>
+          </div>
+
+          <p>
+
+
+
+            <img src="/assets/img/new-england-vegfest-volunteer-team.jpg" class="img-responsive">
+
+            <br>
+            <h2 class="white">Help us advocate for veganism & make Worcester more awesome</h2>
+            <p>Attending New England VegFest is free &amp; open to the public and we rely on support &amp; donations from individuals to make this event happen. This festival is organized &amp; run by volunteers. If you've attended in the past and enjoyed the event, please show your support by becoming a member today&mdash;we have some nice perks to show our gratitude!</p>
+
+            <div class="row">
+              <div class="col-md-offset-2 col-md-8">
+                <h4>DISCOUNTS & PERKS</h4>
+                <h5>ALL YEAR ROUND</h5>
+                <p class="perks">
+                  <li><strong>The Vegan Nest</strong> <em>(Worcester, MA)</em> &mdash; 10% off every day<br></li>
+                  <li><strong>WooBerry</strong> <em>(Worcester, MA)</em> &mdash; 10% off every day<br></li>
+                  <li><strong>Pizza Palace</strong> <em>(Milford, MA)</em> &mdash; 10% off every day<br></li>
+                  <li><strong>Green Hair Company</strong> &mdash; 10% off products every day<br></li>
+                  <li><strong>NU Cafe</strong> <em>(Worcester, MA)</em> &mdash; 20% off every Tuesday<br></li>
+                  <li><strong>Belmont Vegetarian</strong> <em>(Worcester, MA)</em> &mdash; Free upgrade from medium to large on Thursdays<br></li>
+                  <li><strong>Pet Rock Fest Festival</strong> <em>(Grafton, MA)</em> &mdash; $2 Off admission<br></li>
+                  <li><strong>New England VegFest</strong> <em>April 29, 2018 (Worcester, MA)</em> &mdash; early admission<br></li>
+                </p>
+                <em>More discounts & perks added all the time, check back here for the most up-to-date list!</em>
+              </div>
+            </div>
+          </p>
+          <div class="row">
+            <div class="col-xs-12 text-center">
+              <h2 class="zona">Membership Options</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 member-level">
+              <h3 class="member-heading member-heading-1">Individual Membership</h3>
+              <ul>
+                <li>One adult</li>
+                <li>Supports New England VegFest & VegWorcester</li>
+                <li>Discounts & perks at veg-friendly businesses</li>
+                <li>Early admission to New England VegFest</li>
+                <li>100% Tax-deductible donation</li>
+              </ul>
+              <p class="text-center">$6/month</p>
+              <p  class="text-center">
+                <button class="btn btn-block btn-thirdary btn-lg" id="membership-individual">Sign up</button>
+              </p>
+
+            </div>
+            <div class="col-md-4 member-level">
+              <h3 class="member-heading member-heading-2">Family Membership</h3>
+              <ul>
+                <li>Two adults + any kids</li>
+                <li>Supports New England VegFest & VegWorcester</li>
+                <li>Discounts & perks at veg-friendly businesses</li>
+                <li>Early admission to New England VegFest</li>
+                <li>100% Tax-deductible donation</li>
+              </ul>
+              <p class="text-center">$14/month</p>
+              <p  class="text-center">
+                <button class="btn btn-block btn-secondary btn-lg" id="membership-family">Sign up</button>
+              </p>
+            </div>
+            <div class="col-md-4 member-level">
+              <h3 class="member-heading member-heading-3">VIP Membership</h3>
+              <ul>
+                <li>Two adults + any kids</li>
+                <li>Best way to support New England VegFest & VegWorcester</li>
+                <li>Discounts & perks at veg-friendly businesses</li>
+                <li>Early admission to New England VegFest</li>
+                <li>100% Tax-deductible</li>
+              </ul>
+              <p class="text-center">$25/month</p>
+              <p  class="text-center">
+                <button class="btn btn-block btn-primary btn-lg" id="membership-vip">Sign up</button>
+              </p>
+            </div>
+
+          </div>
+	      </div>
+      </header>
+    </div>
+
+        <script src="//checkout.stripe.com/checkout.js"></script>
+        <script>
+        $(document).ready(function () {
+          var checkout = StripeCheckout.configure({
+            key: "{{keyPublishable}}",
+            image: "//vegfest.org/assets/images/vegetables.png",
+            name: "Individual Membership",
+            panelLabel: "Become a member",
+            billingAddress: true,
+            zipCode: true,
+            shippingAddress: true,
+            allowRememberMe: false,
+            description: "$6/month",
+            amount:"600"
+          });
+
+          $('#membership-individual').click( function(e) {
+            checkout.open();
+            e.preventDefault();
+          });
+
+          $('#membership-family').click( function(e) {
+            var checkout = StripeCheckout.configure({
+              key: "{{keyPublishable}}",
+              image: "//vegfest.org/assets/images/vegetables.png",
+              name: "Family Membership",
+              panelLabel: "Become a member",
+              billingAddress: true,
+              zipCode: true,
+              shippingAddress: true,
+              allowRememberMe: false,
+              description: "$14/month",
+              amount:"1400"
+            });
+
+            checkout.open();
+            e.preventDefault();
+          });
+
+          $('#membership-vip').click( function(e) {
+            var checkout = StripeCheckout.configure({
+              key: "{{keyPublishable}}",
+              image: "//vegfest.org/assets/images/vegetables.png",
+              name: "VIP Membership",
+              panelLabel: "Become a member",
+              billingAddress: true,
+              zipCode: true,
+              shippingAddress: true,
+              allowRememberMe: false,
+              description: "$25/month",
+              amount:"2500"
+            });
+
+            checkout.open();
+            e.preventDefault();
+          });
+
+        })
+    </script>
   </body>
 </html>
