--- a/views/index.hbs
+++ b/views/index.hbs
@@ -34,14 +34,14 @@
             <img src="/assets/img/new-england-vegfest-volunteer-team.jpg" class="img-responsive">
 
             <br>
-            <h2 class="white">Help us advocate for veganism & make Worcester more awesome</h2>
+            <h2 class="white">Help Susatin the New England VegFest & VegWorcester</h2>
             <p>Attending New England VegFest is free &amp; open to the public and we rely on support &amp; donations from individuals to make this event happen. This festival is organized &amp; run by volunteers. If you've attended in the past and enjoyed the event, please show your support by becoming a member today&mdash;we have some nice perks to show our gratitude!</p>
 
             <div class="row">
               <div class="col-md-offset-2 col-md-8">
                 <h4>DISCOUNTS & PERKS</h4>
                 <h5>ALL YEAR ROUND</h5>
-                <p class="perks">
+                <p class="small-text">
                   <li><strong>The Vegan Nest</strong> <em>(Worcester, MA)</em> &mdash; 10% off every day<br></li>
                   <li><strong>WooBerry</strong> <em>(Worcester, MA)</em> &mdash; 10% off every day<br></li>
                   <li><strong>Pizza Palace</strong> <em>(Milford, MA)</em> &mdash; 10% off every day<br></li>
@@ -106,6 +106,11 @@
             </div>
 
           </div>
+          <div class="row">
+            <div class="col-md-offset-2 col-md-8">
+              <p class="text-center small-text">VegFest, Inc is a 501(c)3 non-profit organization. Your contribution is tax-deductible. </p>
+            </div>
+          </div>
 	      </div>
       </header>
     </div>
@@ -115,7 +120,7 @@
         $(document).ready(function () {
           var checkout = StripeCheckout.configure({
             key: "{{keyPublishable}}",
-            image: "//vegfest.org/assets/images/vegetables.png",
+            image: "//vegfest.org/assets/images/VegFest-logo-black-sm.png",
             name: "Individual Membership",
             panelLabel: "Become a member",
             billingAddress: true,
@@ -134,7 +139,7 @@
           $('#membership-family').click( function(e) {
             var checkout = StripeCheckout.configure({
               key: "{{keyPublishable}}",
-              image: "//vegfest.org/assets/images/vegetables.png",
+              image: "//vegfest.org/assets/images/VegFest-logo-black-sm.png",
               name: "Family Membership",
               panelLabel: "Become a member",
               billingAddress: true,
@@ -152,7 +157,7 @@
           $('#membership-vip').click( function(e) {
             var checkout = StripeCheckout.configure({
               key: "{{keyPublishable}}",
-              image: "//vegfest.org/assets/images/vegetables.png",
+              image: "//vegfest.org/assets/images/VegFest-logo-black-sm.png",
               name: "VIP Membership",
               panelLabel: "Become a member",
               billingAddress: true,
