amt in number not string

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -128,7 +128,7 @@
             shippingAddress: true,
             allowRememberMe: false,
             description: "$6/month",
-            amount:"600"
+            amount:600
           });
 
           $('#membership-individual').click( function(e) {
@@ -147,7 +147,7 @@
               shippingAddress: true,
               allowRememberMe: false,
               description: "$14/month",
-              amount:"1400"
+              amount:1400
             });
 
             checkout.open();
@@ -165,7 +165,7 @@
               shippingAddress: true,
               allowRememberMe: false,
               description: "$25/month",
-              amount:"2500"
+              amount:2500
             });
 
             checkout.open();
