--- a/views/index.hbs
+++ b/views/index.hbs
@@ -146,7 +146,7 @@
             token: addTokenToDOM,
             locale:"auto",
             key:"{{keyPublishable}}",
-            image:"//vegfest.org/assets/images/vegfest-only-color-logo.png",
+            // image:"//member.vegfest.org/assets/images/vegfest-only-color-logo.png",
             panelLabel:"Become a member",
             billingAddress:true,
             zipCode:true,
