add social meta tags. closes #1

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>VegFest</title>
+    <title>VegFest Membership</title>
+
+    <meta property="og:type" content="article">
+		<meta property="og:url" content="https://member.vegfest.org">
+		<meta property="og:image" content="https://member.vegfest.org/assets/img/socialmedia.jpg">
+		<meta property="og:title" content="Become a member of VegFest today!">
+		<meta property="og:site_name" content="VegFest.org">
+		<meta property="og:description" content="Show your support for New England VegFest and VegWorcester by becoming a VegFest member today! You'll also get discounts and perks for lots of local restaurants & businesses.">
+
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:title" content="Become a member of VegFest today!">
+		<meta name="twitter:description" content="Show your support for New England VegFest and VegWorcester by becoming a VegFest member today! You'll also get discounts and perks for lots of local restaurants & businesses.">
+		<meta name="twitter:image" content="https://member.vegfest.org/assets/img/socialmedia.jpg">
 
     <link rel="stylesheet" href="/assets/css/bootstrap-3.1.0.min.css">
     <link rel="stylesheet" href="/assets/css/font-awesome-4.0.3.min.css">
