--- a/views/index.hbs
+++ b/views/index.hbs
@@ -47,7 +47,7 @@
             <img src="/assets/img/new-england-vegfest-volunteer-team.jpg" class="img-responsive">
 
             <br>
-            <h2 class="white">Help Susatin the New England VegFest & VegWorcester</h2>
+            <h2 class="white">Help Sustain the New England VegFest & VegWorcester</h2>
             <p>Attending New England VegFest is free &amp; open to the public and we rely on support &amp; donations from individuals to make this event happen. This festival is organized &amp; run by volunteers. If you've attended in the past and enjoyed the event, please show your support by becoming a member today&mdash;we have some nice perks to show our gratitude!</p>
 
             <div class="row">
