--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -7,5 +7,15 @@
 </header>
 
 </div>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-73773310-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-73773310-2');
+</script>
+
 </body>
 </html>
