all on one page

--- a/views/partials/membership-perks.hbs
+++ b/views/partials/membership-perks.hbs
@@ -1,9 +1,11 @@
 <section id="memberperks">
+  <div class="text-center">
+    <h2 class="zona">MEMBER DISCOUNTS & PERKS</h2>
+  </div>
   <div class="row">
-    <div class="col-md-offset-2 col-md-8">
-      <h2 class="zona">MEMBER DISCOUNTS & PERKS</h2>
+    <div class="col-xl-10 mx-auto">
         <ul>
-        <li><strong>New England VegFest</strong> <em>Worcester, MA</em> <em>April 29, 2018</em> <br><span class="perks-small-print">Skip the lines!</span></li>
+        <li><strong>New England VegFest</strong> <em>Worcester, MA</em> <br><span class="perks-small-print">Early admission. Skip the lines! <em>April 29, 2018</em></span></li>
         <li><strong>The Vegan Nest</strong> <em>Worcester, MA</em> <br><span class="perks-small-print"> 10% off every day</span></li>
         <li><strong>WooBerry</strong> <em>Worcester, MA</em> <br><span class="perks-small-print">10% off every day</span></li>
         <li><strong>Pizza Palace</strong> <em>Milford, MA</em> <br><span class="perks-small-print">10% off every day</span></li>
