--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,5 +1,5 @@
-<div class="row" style="margin-top:2em;">
-  <div class="col-md-offset-2 col-md-8">
+<div class="row mx-auto mt-5">
+  <div class="col-md-10 mx-auto">
     <p class="text-center small-text">VegFest, Inc is a 501(c)3 non-profit organization that organizes vegetarian festivals and educational programming. Your contribution is tax-deductible. If you're already a member but lost your card, you can <a href="https://goo.gl/forms/h6Qif8C6u9TOUUBV2">request a replacement card</a>. You can <a href="https://goo.gl/forms/dB3KCueQ75pVv73g2">cancel your membership</a> at any time.</p>
   </div>
 </div>
@@ -7,6 +7,9 @@
 </header>
 
 </div>
+
+</div>
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-73773310-2"></script>
 <script>
