--- a/views/subscribe.hbs
+++ b/views/subscribe.hbs
@@ -3,8 +3,8 @@
       <header class="row" id="event-header">
 	      <div class="col-md-10 col-md-offset-1 " style="background: linear-gradient(to bottom,#fff 0,#eaeaea 100%);border-radius: 5px;-webkit-box-shadow: 0 1px 9px 0 rgba(0,0,0,0.7);box-shadow: 0 1px 9px 0 rgba(0,0,0,0.7);padding:5%; margin-top  :2%;">
           <div class="row">
-            <div class="col-sm-offset-2 col-sm-8 text-center">
-              <img src="/assets/img/vegetables.png" alt="" class="img-responsive" />
+            <div class="col-sm-offset-2 col-sm-8 mx-auto">
+              <img src="/assets/img/vegetables.png" alt="" class="img-fluid" />
             </div>
           </div>
           <div class="text-center">
@@ -15,7 +15,7 @@
           </div>
 
           <p>
-            <img src="/assets/img/new-england-vegfest-volunteer-team.jpg" class="img-responsive">
+            <img src="/assets/img/new-england-vegfest-volunteer-team.jpg" class="img-fluid">
           </p>
           <p>
             We will mail your your membership card and welcome packet right away! Show your membership card at any participating businesses and get your discount! Also hold onto it because that's how you get
