--- a/views/partials/signup-form.hbs
+++ b/views/partials/signup-form.hbs
@@ -39,7 +39,7 @@
     <div class="col-sm-6">
       <input type="radio" name="subscriptionPlan" value="membership-06"> $6/month<br>
       <input type="radio" name="subscriptionPlan" value="membership-14" checked> $14/month<br>
-      <input type="radio" name="subscriptionPlan" value="membership-25"> $25/month
+      <input type="radio" name="subscriptionPlan" value="membership-25"> $25/month<br>
       <input type="radio" name="subscriptionPlan" value="membership-50"> $50/month
     </div>
   </div>
