--- a/views/subscribe.hbs
+++ b/views/subscribe.hbs
@@ -1,7 +1,7 @@
 {{> header }}
 
       <header class="row" id="event-header">
-	      <div class="col-md-10 col-md-offset-1 " style="background: linear-gradient(to bottom,#fff 0,#eaeaea 100%);border-radius: 5px;-webkit-box-shadow: 0 1px 9px 0 rgba(0,0,0,0.7);box-shadow: 0 1px 9px 0 rgba(0,0,0,0.7);padding:5%; margin-top  :2%;">
+	      <div class="col-md-10 mx-auto" style="background: linear-gradient(to bottom,#fff 0,#eaeaea 100%);border-radius: 5px;-webkit-box-shadow: 0 1px 9px 0 rgba(0,0,0,0.7);box-shadow: 0 1px 9px 0 rgba(0,0,0,0.7);padding:5%; margin-top  :2%;">
           <div class="row">
             <div class="col-sm-offset-2 col-sm-8 mx-auto">
               <img src="/assets/img/vegetables.png" alt="" class="img-fluid" />
@@ -13,10 +13,6 @@
               Thank you for becoming a member! We really appreciate your support of VegWorcester and the New England VegFest! We are so happy to have you on our team!
   	        </p>
           </div>
-
-          <p>
-            <img src="/assets/img/new-england-vegfest-volunteer-team.jpg" class="img-fluid">
-          </p>
           <p>
             We will mail your your membership card and welcome packet right away! Show your membership card at any participating businesses and get your discount! Also hold onto it because that's how you get
           </p>
