--- a/views/subscribe.hbs
+++ b/views/subscribe.hbs
@@ -9,12 +9,10 @@
           </div>
           <div class="text-center">
             <h1 class="zona">Thank you!</h1>
-  	        <p>
-              Thank you for becoming a member! We really appreciate your support of VegWorcester and the New England VegFest! We are so happy to have you on our team!
-  	        </p>
+
           </div>
           <p>
-            We will mail your your membership card and welcome packet right away! Show your membership card at any participating businesses and get your discount! Also hold onto it because that's how you get
+            We will mail your your membership card and welcome packet right away! Show your membership card at any participating businesses and get your discount. Also be sure to bring your card with you to New England VegFest to get early admission.
           </p>
 
 
