--- a/views/partials/signup-form.hbs
+++ b/views/partials/signup-form.hbs
@@ -58,7 +58,7 @@
   <div class="form-group row">
     <label for="stripeShippingName" class="col-sm-2 control-label">Name</label>
     <div class="col-sm-10">
-      <input id="stripeShippingName" class="form-control" type="text" name="stripeShippingName" value="" placeholder="Abbie Hoffman" required>
+      <input id="stripeShippingName" class="form-control" type="text" name="stripeShippingName" value="" placeholder="John Smith" required>
     </div>
   </div>
 
