--- a/views/partials/signup-form.hbs
+++ b/views/partials/signup-form.hbs
@@ -65,7 +65,7 @@
   <div class="form-group row">
     <label for="stripeEmail" class="col-sm-2 control-label">Email</label>
     <div class="col-sm-10">
-      <input id="stripeEmail" class="form-control" type="email" name="stripeEmail" value="" placeholder="abbie.hoffman@gmail.com" required>
+      <input id="stripeEmail" class="form-control" type="email" name="stripeEmail" value="" placeholder="john.smith@gmail.com" required>
     </div>
   </div>
   <hr>
