--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,6 +24,8 @@
               Attending New England VegFest is free &amp; open to the public and we rely on support &amp; donations from individuals to make this event happen. This festival is organized &amp; run by volunteers. If you've attended in the past and enjoyed the event, please show your support by becoming a member today&mdash;we have some nice perks to show our gratitude!
             </p>
 
+            <img src="/assets/img/vegfest-card-preview.jpg" class="img-fluid">
+
 
 
             {{> membership-perks}}
@@ -43,5 +45,5 @@
 
 
 
-      
+
 {{> footer }}
