--- a/views/partials/membership-perks.hbs
+++ b/views/partials/membership-perks.hbs
@@ -5,16 +5,39 @@
   <div class="row">
     <div class="col-xl-10 mx-auto">
         <ul>
-        <li><strong>New England VegFest</strong> <em>Worcester, MA</em> <br><span class="perks-small-print">Early admission. Skip the lines! <em>April 29, 2018</em></span></li>
-        <li><strong>The Vegan Nest</strong> <em>Worcester, MA</em> <br><span class="perks-small-print"> 10% off every day</span></li>
-        <li><strong>WooBerry</strong> <em>Worcester, MA</em> <br><span class="perks-small-print">10% off every day</span></li>
-        <li><strong>Pizza Palace</strong> <em>Milford, MA</em> <br><span class="perks-small-print">10% off every day</span></li>
-        <li><strong>Green Hair Company</strong> <em>Worcester, MA</em> <br><span class="perks-small-print">10% off products every day</span></li>
-        <li><strong>NU Cafe</strong> <em>Worcester, MA</em> <br><span class="perks-small-print">20% off every Tuesday</span></li>
-        <li><strong>Belmont Vegetarian</strong> <em>Worcester, MA</em> <br><span class="perks-small-print">Free upgrade from medium to large on Thursdays</span></li>
-        <li><strong>Pet Rock Fest Festival</strong> <em>Grafton, MA</em> <br><span class="perks-small-print">$2 off admission</span></li>
+        <li><strong>New England VegFest</strong>
+          <em>Early Admission</em><br>
+          <span class="perks-small-print">Early admission. Skip the lines! <em>April 29, 2018 in Worcester, MA</em></span>
+        </li>
+        <li><strong>The Vegan Nest</strong>
+          <em>10% off every day</em> <br>
+          <span class="perks-small-print">Worcester, MA</span>
+        </li>
+        <li><strong>WooBerry</strong>
+          <em>10% off every day</em> <br>
+          <span class="perks-small-print">Worcester, MA</span>
+        </li>
+        <li><strong>Pizza Palace</strong>
+          <em>10% off every day</em> <br>
+          <span class="perks-small-print">Milford, MA</span></li>
+        <li><strong>Green Hair Company</strong>
+          <em>10% off products every day</em> <br>
+          <span class="perks-small-print">Worcester, MA</span>
+        </li>
+        <li><strong>NU Cafe</strong>
+          <em>20% off every Tuesday</em> <br>
+          <span class="perks-small-print">Worcester, MA</span>
+        </li>
+        <li><strong>Belmont Vegetarian</strong>
+          <em>Free upgrade from medium to large on Thursdays</em> <br>
+          <span class="perks-small-print">Worcester, MA</span>
+        </li>
+        <li><strong>Pet Rock Fest Festival</strong>
+          <em>$2 off admission</em> <br>
+          <span class="perks-small-print">Grafton, MA</span>
+        </li>
         </ul>
-      <em>More discounts & perks added all the time, check back here for the most up-to-date list!</em>
+        <p class="text-center"><em>More discounts & perks added all the time. Sign up today and we'll keep you in the loop about any new benefits!</em></p>
     </div>
   </div>
 </section>
