--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -30,11 +30,17 @@ html, body {
 #memberperks ul li {
   display: list-item;
   padding-top: 1em;
-  font-size: 26px;
+  font-size: 22px;
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   list-style: none;
 }
+@media(max-width:992px){
+  #memberperks ul li {
+    font-size: 16px;
+  }
+}
+
 
 #event-header {
   padding-left: 2%;
@@ -256,5 +262,5 @@ footer {
   font-size: 1em !important;
 }
 .perks-small-print {
-  font-size: .75em;
+  font-size: .65em;
 }
