--- a/views/stats.hbs
+++ b/views/stats.hbs
@@ -20,6 +20,7 @@
               <li>{{monthly06}} @ $6/mo members</li>
               <li>{{monthly14}} @ $14/mo members</li>
               <li>{{monthly25}} @ $25/mo members </li>
+              <li>{{monthly50}} @ $50/mo members </li>
             </ul>
 
           </p>
