--- a/views/stats.hbs
+++ b/views/stats.hbs
@@ -16,11 +16,14 @@
           <hr>
 
           <p>
+            Total number of members: <strong>{{totalMembers}}</strong> <br>
+            Total fundraising: <strong>${{totalMonthlyAmt}}/mo</strong> <br>
+            <br>
             <ul>
-              <li>{{monthly06}} @ $6/mo members</li>
-              <li>{{monthly14}} @ $14/mo members</li>
-              <li>{{monthly25}} @ $25/mo members </li>
-              <li>{{monthly50}} @ $50/mo members </li>
+              <li>{{monthly06}} members @ $6/mo</li>
+              <li>{{monthly14}} members @ $14/mo</li>
+              <li>{{monthly25}} members @ $25/mo</li>
+              <li>{{monthly50}} members @ $50/mo </li>
             </ul>
 
           </p>
