--- a/views/partials/membership-perks.hbs
+++ b/views/partials/membership-perks.hbs
@@ -9,6 +9,10 @@
           <em>Early Admission</em><br>
           <span class="perks-small-print">Early admission. Skip the lines! <em>April 29, 2018 in Worcester, MA</em></span>
         </li>
+        <li><strong>Loving Hut (Chandler Street)</strong>
+          <em>10% off every day</em> <br>
+          <span class="perks-small-print">Worcester, MA</span>
+        </li>
         <li><strong>The Vegan Nest</strong>
           <em>10% off every day</em> <br>
           <span class="perks-small-print">Worcester, MA</span>
