make 3reasons the homepage

--- a/views/3reasons.hbs
+++ b/views/3reasons.hbs
@@ -32,7 +32,7 @@
 
           <h2>2. To change the world for the better.</h2>
           <p>
-            Membership funds the best veg fest in the whole country. With your
+            Membership funds the best VegFest in the whole country. With your
             help, we'll continue to grow
             <a href="https://NewEnglandVegFest.com/" target="_blank">
               New England VegFest</a> so we can help people from near and far
