--- a/views/partials/membership-perks.hbs
+++ b/views/partials/membership-perks.hbs
@@ -13,6 +13,10 @@
           <em>10% off every day</em> <br>
           <span class="perks-small-print">Worcester, MA</span>
         </li>
+        <li><strong>Wooden Noodles (Popup at 3Cross Brewery)</strong>
+          <em>10% off</em> <br>
+          <span class="perks-small-print">Worcester, MA</span>
+        </li>
         <li><strong>The Vegan Nest</strong>
           <em>10% off every day</em> <br>
           <span class="perks-small-print">Worcester, MA</span>
@@ -24,7 +28,7 @@
         <li><strong>Pizza Palace</strong>
           <em>10% off every day</em> <br>
           <span class="perks-small-print">Milford, MA</span></li>
-        <li><strong>Green Hair Company</strong>
+        <li><strong>Sage & Grace organic salon</strong>
           <em>10% off products every day</em> <br>
           <span class="perks-small-print">Worcester, MA</span>
         </li>
